--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,7 +19,7 @@
                 <span></span>
             </button>
             <a href="/" class="header-logo">
-                CSFLOAT PARSER
+                CSFLOAT FLOAT PARSER
             </a>
             <!-- <button class="header-button open-modal toggle-active" data-modal-open="key">
                 Use Key
